# funeral-cli

./: .gitignore  CLAUDE.md  LICENSE  OPEN_SOURCE_SCOPE.md  PLAN_github_about_readme.md  README.md  install.sh  project.toml  pyproject.toml
data/eval/: human_reviews.json
data/framework/: README.md  framework_pack.production.draft.json  framework_pack.seed.json  framework_review_shortlist.md  judgment_atoms.eval_seed.jsonl  judgment_atoms.generated.jsonl  judgment_atoms.smoke.jsonl
funeralai/: __main__.py  analyzer.py  auth.py  cli.py  exporting.py  i18n.py  output.py  recommendations.py  scraper.py
funeralai/cli_assets/: manifest.json
funeralai/cli_assets/banner/: large.ansi.txt  small.ansi.txt
funeralai/cli_assets/icon/: large.ansi.txt  small.ansi.txt
funeralai/prompts/: chat.md  judge_github.md  judge_local.md  judge_verdict.md  judge_web.md
funeralai/tui/: __init__.py  app.py  app.tcss  commands.py  dispatch.py  intent.py  slash.py  state.py  theme.py
funeralai/tui/dialogs/: config_dialog.py  help_dialog.py  provider_dialog.py  theme_dialog.py  vote_dialog.py
funeralai/tui/screens/: __init__.py  home.py  session.py  setup.py
funeralai/tui/themes/: catppuccin.json  funeral.json  gruvbox.json  nord.json  tokyonight.json
funeralai/tui/widgets/: logo.py  prompt_input.py  report.py  spinner.py  tips.py
plans/: cli_build.md  parallel_judge.md  tui_interactive.md
tests/: test_analyzer.py  test_config.py  test_i18n.py  test_intent.py  test_output.py  test_prompt_input.py  test_session_screen.py  test_state.py  test_theme.py  test_tui_slash.py
