[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "funeralai"
version = "0.1.0"
description = "AI project analysis CLI tool based on the 葬AI framework"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "葬爱咸鱼" },
]
keywords = ["ai", "analysis", "investment", "cli"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    "openai>=1.0",
    "textual>=3.0",
    "anthropic>=0.50",
    "httpx[socks]>=0.27",
    "trafilatura>=1.8",
    "pymupdf>=1.24",
    "playwright>=1.40",
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[project.scripts]
funeralai = "funeralai.cli:main"

[tool.setuptools.packages.find]
include = ["funeralai*"]

[tool.setuptools.package-data]
funeralai = ["prompts/*.md", "cli_assets/**/*.txt", "cli_assets/manifest.json", "tui/**/*.json", "tui/**/*.tcss"]
